# election_text_analysis

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  example.ipynb  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
tests/: test_election_text_analysis.py
