[tool.poetry]
name = "election_text_analysis"
version = "0.1.0"
description = "Functions to load and analyzes open-ended data from the ANES election perception surveys conducted every 4 years"
authors = ["Nikhila Anand"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
